# swift-shifter

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tools.toml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml  tag.yml
docs/superpowers/plans/: 2026-04-08-pymupdf4llm-replace-pdftohtml.md  2026-04-13-pdf-merge.md  2026-05-23-user-space-tool-downloads.md
docs/superpowers/specs/: 2026-04-08-pymupdf4llm-replace-pdftohtml-design.md  2026-05-23-user-space-tool-downloads-design.md
llm-translation-test/: README.md  config.json  custom_template.json  evaluate.py  metrics.py  requirements.txt  testset.py
llm-translation-test/backends/: __init__.py  base.py  llamacpp_backend.py  transformers_backend.py
scripts/: build-icons.sh  bump-version.sh
swift-shifter/: .gitignore  Cargo.toml  tauri.conf.json
swift-shifter/capabilities/: default.json  settings.json
swift-shifter/icons/: icon.icns
swift-shifter/src/: cli.rs  clipboard.rs  config.rs  downloader.rs  hotkey.rs  main.rs  tray.rs  util.rs
swift-shifter/src/converter/: data.rs  document.rs  graph.rs  image.rs  media.rs  mod.rs  tests.rs
swift-shifter/src/converter/document/: binaries.rs  conversion.rs  llm.rs  merge.rs  mod.rs  types.rs  utils.rs
swift-shifter/tests/: chain_cli.rs
ui/: index.html  settings.html
ui/src/: main.ts  settings.css  settings.js  settings.ts  style.css  tokens.css
