[package]
name = "swift-shifter"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif"] }
ravif = "0.11"
rgb = "0.8"
tokio = { version = "1", features = ["full"] }
which = "7"
dirs = "5"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
